--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,187 +2,195 @@ name: Deploy Trading Data Terminal
 
 on:
   push:
-    branches: [ main ]
-  workflow_dispatch:
+    branches: [ main, master ]
+  pull_request:
+    branches: [ main, master ]
+  workflow_dispatch:  # Разрешить ручной запуск
 
+# Настройка разрешений для GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
-
+# Запуск только на последней версии Ubuntu
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Debug - List files before build
-        run: |
-          echo "📁 Структура репозитория:"
-          find . -type f -name "*.js" -o -name "*.html" -o -name "*.css" | grep -v node_modules | sort
-          echo ""
-          echo "🔍 Проверяем наличие firebase-config.js.template:"
-          ls -la firebase-config.js.template || echo "❌ firebase-config.js.template не найден!"
-
-      - name: Create firebase-config.js from template
-        run: |
-          echo "🔧 Создание firebase-config.js из шаблона..."
-          
-          # Создаем директорию для сборки
-          mkdir -p build
-          
-          # Читаем шаблон и заменяем переменные на секреты
-          if [ -f "firebase-config.js.template" ]; then
-            echo "✅ Шаблон найден, создаем конфигурацию..."
-            
-            # Создаем firebase-config.js с подстановкой секретов
-            sed \
-              -e "s|FIREBASE_API_KEY|${{ secrets.FIREBASE_API_KEY }}|g" \
-              -e "s|FIREBASE_AUTH_DOMAIN|${{ secrets.FIREBASE_AUTH_DOMAIN }}|g" \
-              -e "s|FIREBASE_DATABASE_URL|${{ secrets.FIREBASE_DATABASE_URL }}|g" \
-              -e "s|FIREBASE_PROJECT_ID|${{ secrets.FIREBASE_PROJECT_ID }}|g" \
-              -e "s|FIREBASE_STORAGE_BUCKET|${{ secrets.FIREBASE_STORAGE_BUCKET }}|g" \
-              -e "s|FIREBASE_MESSAGING_SENDER_ID|${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}|g" \
-              -e "s|FIREBASE_APP_ID|${{ secrets.FIREBASE_APP_ID }}|g" \
-              -e "s|FIREBASE_MEASUREMENT_ID|${{ secrets.FIREBASE_MEASUREMENT_ID }}|g" \
-              firebase-config.js.template > build/firebase-config.js
-              
-            echo "✅ firebase-config.js создан"
-            
-            # Проверяем что файл создан и не пустой
-            if [ -s "build/firebase-config.js" ]; then
-              echo "📄 Размер файла: $(wc -l < build/firebase-config.js) строк"
-              
-              # Проверяем что секреты подставлены
-              if grep -q "FIREBASE_" build/firebase-config.js; then
-                echo "⚠️  ВНИМАНИЕ: Некоторые секреты не подставлены (остались FIREBASE_)"
-                echo "   Проверьте GitHub Secrets:"
-                echo "   - FIREBASE_API_KEY"
-                echo "   - FIREBASE_AUTH_DOMAIN"
-                echo "   - FIREBASE_DATABASE_URL"
-                echo "   - FIREBASE_PROJECT_ID"
-                echo "   - FIREBASE_STORAGE_BUCKET"
-                echo "   - FIREBASE_MESSAGING_SENDER_ID"
-                echo "   - FIREBASE_APP_ID"
-                echo "   - FIREBASE_MEASUREMENT_ID"
-              else
-                echo "✅ Все секреты успешно подставлены"
-              fi
-            else
-              echo "❌ ОШИБКА: firebase-config.js пустой или не создан"
-              exit 1
-            fi
-          else
-            echo "❌ ОШИБКА: firebase-config.js.template не найден!"
-            exit 1
-          fi
-
-      - name: Copy HTML files
-        run: |
-          echo "📄 Копирование HTML файлов..."
-          
-          # Копируем index.html в build
-          cp index.html build/
-          
-          # Заменяем путь к firebase-config.js на относительный
-          sed -i 's|src="firebase-config.js"|src="./firebase-config.js"|g' build/index.html
-          
-          # Копируем service worker
-          cp service-worker.js build/
-          
-          echo "✅ HTML файлы скопированы"
-
-      - name: Copy CSS files
-        run: |
-          echo "🎨 Копирование CSS файлов..."
-          
-          # Создаем структуру директорий CSS
-          mkdir -p build/css
-          mkdir -p build/css/components
-          mkdir -p build/css/pages
-          
-          # Копируем CSS файлы
-          cp css/base.css build/css/
-          cp css/components/cards.css build/css/components/
-          cp css/components/modal.css build/css/components/
-          cp css/components/table.css build/css/components/
-          cp css/pages/terminal.css build/css/pages/
-          
-          echo "✅ CSS файлы скопированы"
-
-      - name: Copy JavaScript files
-        run: |
-          echo "📜 Копирование JavaScript файлов..."
-          
-          # Создаем структуру директорий JS
-          mkdir -p build/js
-          mkdir -p build/js/modules
-          mkdir -p build/js/services
-          mkdir -p build/js/utils
-          
-          # Копируем основные JS файлы
-          cp js/app.js build/js/
-          cp js/constants.js build/js/
-          
-          # Копируем модули
-          cp js/modules/auth.js build/js/modules/
-          cp js/modules/charts.js build/js/modules/
-          cp js/modules/firebase.js build/js/modules/
-          
-          # Копируем сервисы
-          cp js/services/api.js build/js/services/
-          cp js/services/cache.js build/js/services/
-          
-          # Копируем утилиты
-          cp js/utils/helpers.js build/js/utils/
-          
-          echo "✅ JavaScript файлы скопированы"
-
-      - name: Create .nojekyll file
-        run: |
-          echo "🚫 Создание .nojekyll файла..."
-          touch build/.nojekyll
-          echo "✅ Файл создан"
-
-      - name: Debug - List build directory
-        run: |
-          echo "📁 Структура build директории:"
-          find build -type f | sort
-          echo ""
-          echo "🔍 Проверяем критические файлы:"
-          ls -la build/firebase-config.js || echo "❌ firebase-config.js не найден в build!"
-          ls -la build/index.html || echo "❌ index.html не найден в build!"
-          ls -la build/js/modules/auth.js || echo "❌ auth.js не найден в build!"
-          
-          # Проверяем содержимое firebase-config.js (первые 3 строки)
-          echo ""
-          echo "📄 Первые строки firebase-config.js:"
-          head -5 build/firebase-config.js
-
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
-        with:
-          path: 'build/'
-
-  deploy:
+  build-and-deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: build
     
     steps:
-      - name: Deploy to GitHub Pages
+      - name: 🚀 Проверка репозитория
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Полная история для корректной работы
+          
+      - name: 🛠️ Настройка Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'npm'
+          
+      - name: 📦 Установка зависимостей
+        run: |
+          echo "Установка npm зависимостей..."
+          npm ci || npm install
+          
+      - name: 🔧 Генерация Firebase конфигурации
+        run: |
+          echo "Генерация firebase-config.js из GitHub Secrets..."
+          
+          # Создаем файл конфигурации из шаблона
+          cat > firebase-config.js << 'EOF'
+          // 🔥 FIREBASE CONFIG - AUTO GENERATED FROM GITHUB SECRETS
+          // ⚠️ СОЗДАНО АВТОМАТИЧЕСКИ ПРИ ДЕПЛОЕ - НЕ РЕДАКТИРОВАТЬ!
+          
+          console.log('🚀 Загрузка Firebase конфигурации из GitHub Secrets...');
+          
+          const firebaseConfig = {
+            apiKey: "${{ secrets.FIREBASE_API_KEY }}",
+            authDomain: "${{ secrets.FIREBASE_AUTH_DOMAIN }}",
+            databaseURL: "${{ secrets.FIREBASE_DATABASE_URL }}",
+            projectId: "${{ secrets.FIREBASE_PROJECT_ID }}",
+            storageBucket: "${{ secrets.FIREBASE_STORAGE_BUCKET }}",
+            messagingSenderId: "${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}",
+            appId: "${{ secrets.FIREBASE_APP_ID }}",
+            measurementId: "${{ secrets.FIREBASE_MEASUREMENT_ID }}"
+          };
+          
+          console.log('📋 Проверка конфигурации Firebase:');
+          console.log('  - Проект:', firebaseConfig.projectId);
+          console.log('  - Database URL:', firebaseConfig.databaseURL);
+          console.log('  - Auth Domain:', firebaseConfig.authDomain);
+          
+          // Проверка что все ключи заменены
+          const hasPlaceholders = Object.values(firebaseConfig).some(value => 
+            typeof value === 'string' && (value.includes('${{') || value.includes('secrets.'))
+          );
+          
+          if (hasPlaceholders) {
+            console.error('❌ ОШИБКА: В конфигурации есть не подставленные переменные!');
+            console.error('   Проверьте GitHub Secrets в репозитории');
+          } else {
+            console.log('✅ Все переменные конфигурации заменены реальными значениями');
+            console.log('✅ Конфигурация готова к использованию');
+          }
+          
+          // Экспорт для глобального использования
+          if (typeof window !== 'undefined') {
+              window.firebaseConfig = firebaseConfig;
+              console.log('✅ Firebase конфигурация сохранена в window.firebaseConfig');
+          }
+          EOF
+          
+          echo "✅ firebase-config.js создан"
+          echo "Проверка содержимого (первые 5 строк):"
+          head -n 20 firebase-config.js
+          
+      - name: 🔍 Проверка конфигурации
+        run: |
+          echo "Проверка конфигурации Firebase..."
+          
+          # Проверяем что файл создан
+          if [ ! -f "firebase-config.js" ]; then
+            echo "❌ Ошибка: firebase-config.js не создан"
+            exit 1
+          fi
+          
+          # Проверяем что все переменные заменены
+          if grep -q "\${{" firebase-config.js; then
+            echo "❌ Ошибка: В файле остались переменные GitHub Actions!"
+            grep -n "\${{" firebase-config.js
+            exit 1
+          fi
+          
+          # Проверяем что нет значений по умолчанию
+          if grep -q "FIREBASE_" firebase-config.js; then
+            echo "❌ Ошибка: В файле остались переменные FIREBASE_*"
+            grep -n "FIREBASE_" firebase-config.js
+            exit 1
+          fi
+          
+          echo "✅ Конфигурация проверена успешно"
+          
+      - name: 📁 Создание структуры папок
+        run: |
+          echo "Создание необходимой структуры папок..."
+          mkdir -p css/components css/pages js/modules js/services js/utils scripts
+          
+      - name: 🏗️ Проверка файлов
+        run: |
+          echo "Проверка наличия всех необходимых файлов..."
+          REQUIRED_FILES=(
+            "index.html"
+            "css/base.css"
+            "css/components/modal.css"
+            "css/components/cards.css"
+            "css/components/table.css"
+            "css/pages/terminal.css"
+            "js/app.js"
+            "js/constants.js"
+            "js/modules/auth.js"
+            "js/modules/firebase.js"
+            "js/modules/charts.js"
+            "js/services/api.js"
+            "js/services/cache.js"
+            "js/utils/helpers.js"
+            "service-worker.js"
+            "firebase-config.js"
+          )
+          
+          missing_files=0
+          for file in "${REQUIRED_FILES[@]}"; do
+            if [ ! -f "$file" ]; then
+              echo "❌ Отсутствует файл: $file"
+              missing_files=$((missing_files + 1))
+            else
+              echo "✅ Найден файл: $file"
+            fi
+          done
+          
+          if [ $missing_files -gt 0 ]; then
+            echo "❌ Отсутствует $missing_files файлов!"
+            exit 1
+          else
+            echo "✅ Все файлы на месте"
+          fi
+          
+      - name: 🚀 Настройка GitHub Pages
+        uses: actions/configure-pages@v3
+        
+      - name: 📦 Сборка проекта
+        run: |
+          echo "Сборка проекта..."
+          # Создаем .nojekyll файл для отключения обработки Jekyll
+          touch .nojekyll
+          
+          # Создаем файл для проверки деплоя
+          echo "Deployed: $(date)" > DEPLOY_TIME.txt
+          
+      - name: 📤 Загрузка артефактов
+        uses: actions/upload-pages-artifact@v2
+        with:
+          path: '.'  # Загружаем всю текущую директорию
+          
+      - name: 🚀 Деплой на GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
+        
+      - name: 📊 Логирование результата
+        run: |
+          echo "✅ Деплой завершен успешно!"
+          echo "🌐 Сайт доступен по адресу: https://askhat707.github.io/trading-data/"
+          echo "🕐 Время деплоя: $(date)"
+          
+      - name: 🔔 Уведомление о завершении
+        if: always()
+        run: |
+          if [ "${{ job.status }}" = "success" ]; then
+            echo "🎉 Деплой успешно завершен!"
+          else
+            echo "❌ Деплой завершился с ошибкой"
+          fi
